chore: better path for door routers
